--- a/.github/workflows/autotests.yml
+++ b/.github/workflows/autotests.yml
@@ -2,6 +2,11 @@ name: Autotests
 run-name: Test ${{ github.event.inputs.STAGE }} | ${{ github.event.inputs.MARKER }} | ${{ github.event.inputs.THREADS }} threads
 
 on:
+  push:
+    branches:
+      - main        # или нужная ветка
+    paths:
+      - '.github/workflows/autotests.yml'
   workflow_dispatch:
     inputs:
       ENV:
