--- a/.github/workflows/autotests.yml
+++ b/.github/workflows/autotests.yml
@@ -79,10 +79,12 @@ jobs:
         if: always()
         run: |
           docker run --rm -v $(pwd):/workspace mcr.microsoft.com/playwright/python:v1.47.0-noble \
-            sh -c "apt-get update && apt-get install -y nodejs npm && \
-             npm install -g allure-commandline --save-dev && \
-             cd /workspace && \
-             allure generate allure-results -c -o allure-report"
+          bash -lc "apt-get update && apt-get install -y openjdk-17-jre nodejs npm && \
+                export JAVA_HOME=/usr/lib/jvm/java-17-openjdk-amd64 && \
+                export PATH=\$JAVA_HOME/bin:\$PATH && \
+                npm install -g allure-commandline --save-dev && \
+                cd /workspace && \
+                allure generate allure-results -c -o allure-report"
 
       # Деплой на GitHub Pages
       - name: Deploy to GitHub Pages
