change to headless=True

--- a/pytest.ini
+++ b/pytest.ini
@@ -3,9 +3,13 @@ addopts =
     '-v'
     '-s'
 ;    '--alluredir=allure-results -q'
-    '--headed'
+;    '--headed'
 
 markers =
     api
     smoke
     regress
+
+[playwright]
+browser = chromium
+headless = true
