--- a/.github/workflows/autotests.yml
+++ b/.github/workflows/autotests.yml
@@ -1,1 +1,98 @@
+name: Autotests
+run-name: Test ${{ github.event.inputs.STAGE }} | ${{ github.event.inputs.MARKER }} | ${{ github.event.inputs.THREADS }} threads
+
+on:
+  push:
+    branches:
+      - main        # или нужная ветка
+    paths:
+      - '.github/workflows/autotests.yml'
+  workflow_dispatch:
+    inputs:
+      ENV:
+        description: 'окружение: dev/DEV'
+        required: true
+        type: environment
+      BROWSER:
+        description: 'выберите браузер'
+        required: true
+        default: 'firefox'
+        type: choice
+        options:
+          - chromium
+          - firefox
+          - webkit
+      MARKER:
+        description: 'маркеры тестов'
+        required: true
+        default: 'smoke'
+        type: choice
+        options:
+          - smoke
+          - regress
+          - uat
+          - api
+      THREADS:
+        description: 'параллельные потоки'
+        required: true
+        default: '1'
+        type: choice
+        options:
+          - 1
+          - 2
+          - 3
+
+jobs:
+  tests:
+    runs-on: ubuntu-latest
+    #environment: ${{ github.event.inputs.ENV }}
+
+    steps:
+      - uses: actions/checkout@v4
+
+      # Подготовка Allure environment
+      - name: Prepare Allure environment
+        run: |
+          mkdir -p allure-results
+          echo "Branch=${{ github.ref_name }}" > allure-results/environment.properties
+          echo "Commit=${{ github.sha }}" >> allure-results/environment.properties
+          echo "Browser=${{ github.event.inputs.BROWSER }}" >> allure-results/environment.properties
+          echo "Stage=${{ github.event.inputs.STAGE }}" >> allure-results/environment.properties
+
+      # Сборка и запуск тестов через Docker
+      - name: Build and run tests
+        env:
+          BROWSER: ${{ github.event.inputs.BROWSER }}
+          MARKER: ${{ github.event.inputs.MARKER }}
+          THREADS: ${{ github.event.inputs.THREADS }}
+        run: |
+          docker build -t ui-tests:latest -f Dockerfile .
+          docker run --rm \
+            -e BROWSER=$BROWSER \
+            -e MARKER=$MARKER \
+            -e THREADS=$THREADS \
+            -v $(pwd)/allure-results:/usr/workspace/allure-results \
+            ui-tests:latest
+          ls -R allure-results   # ← проверка, что файлы реально появились
+
+      # Генерация Allure отчета
+      - name: Generate Allure report
+        if: always()
+        run: |
+          docker run --rm -v $(pwd):/workspace mcr.microsoft.com/playwright/python:v1.47.0-noble \
+          bash -lc "apt-get update && apt-get install -y openjdk-17-jre nodejs npm && \
+                export JAVA_HOME=/usr/lib/jvm/java-17-openjdk-amd64 && \
+                export PATH=\$JAVA_HOME/bin:\$PATH && \
+                npm install -g allure-commandline --save-dev && \
+                cd /workspace && \
+                allure generate allure-results -c -o allure-report"
+
+      # Деплой на GitHub Pages
+      - name: Deploy to GitHub Pages
+        if: success()
+        uses: JamesIves/github-pages-deploy-action@v4
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          branch: gh-pages
+          folder: allure-report
 
