--- a/.github/workflows/autotests.yml
+++ b/.github/workflows/autotests.yml
@@ -23,11 +23,12 @@ on:
           - firefox
           - webkit
       MARKER:
-        description: 'маркеры тестов'
+        description: 'маркеры тестов (all = все)'
         required: true
-        default: 'smoke'
+        default: 'all'
         type: choice
         options:
+          - all
           - smoke
           - regress
           - uat
@@ -95,4 +96,3 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           branch: gh-pages
           folder: allure-report
-
